public/assets/css/style.css
body {
    background-color: #000000;
    color: #fff;
}

a.navbar-brand:link {
    font-size: 42px;
    color: #fff;
}
a.navbar-brand:visited {
    color: #fff;
}
a.navbar-brand:hover {
    color: #fff;
}
.slogan {
    font-size: 14px;
}
.jumbotron {
    background-color: #000;
    font-size: 58px;
    color: #c96a27;
}
h2 {
    color: #87fcfd;
}
.small-top .date-sec {
    font-size: 13px;
    font-weight: 600;
    float: left;
    margin-top: 4px;
    color: #898989;
}

#submit {
    margin-bottom: 55px;
}

/* Add a gray background color and some padding to the footer */

footer {
    background-color: #222222;
    padding: 25px;
    color: #898989;
}

.carousel-inner img {
    width: 100%;
    /* Set width to 100% */
    margin: auto;
    min-height: 200px;
}

/* Remove the navbar's default margin-bottom and rounded borders */

.navbar {
    margin-bottom: 0;
    border-radius: 0;
}

/*  #myCarousel {
  	height: 700px;
  }*/

.item img {
    width: 400px;
    height: 100px;
}

/* Hide the carousel text when the screen is less than 600 pixels wide */

@media (max-width: 600px) {
    .carousel-caption {
        display: none;
    }
}

#login-dp {
    min-width: 250px;
    padding: 14px 14px 0;
    overflow: hidden;
    background-color: rgba(255, 255, 255, .8);
}

#login-dp .help-block {
    font-size: 12px
}

#login-dp .bottom {
    background-color: rgba(255, 255, 255, .8);
    border-top: 1px solid #ddd;
    clear: both;
    padding: 14px;
}

#login-dp .social-buttons {
    margin: 12px 0
}

#login-dp .social-buttons a {
    width: 49%;
}

#login-dp .form-group {
    margin-bottom: 10px;
}

#profilePosters {
    width: 200px;
    height: auto;
}

@media(max-width:768px) {
    #login-dp {
        background-color: inherit;
        color: #fff;
    }
    #login-dp .bottom {
        background-color: inherit;
        border-top: 0 none;
    }
}

